force-app/main/default/objects/Sales_Debrief__c/fields/Impact_of_Employee_Perception_of_UHC__c.field-meta.xml
<CustomField>
    <fullName>Impact_of_Employee_Perception_of_UHC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Impact of Employee Perception of UHC</label>
    <type>TextArea</type>
</CustomField>