force-app/main/default/objects/Sales_Debrief__c/fields/Improving_Cross_Sell_Approach__c.field-meta.xml
<CustomField>
    <fullName>Improving_Cross_Sell_Approach__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Improving Cross-Sell Approach</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>