force-app/main/default/objects/Sales_Debrief__c/fields/Increased_Medical_Trend_Concern__c.field-meta.xml
<CustomField>
    <fullName>Increased_Medical_Trend_Concern__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Increased Medical Trend Concern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>