force-app/main/default/objects/Sales_Debrief__c/fields/Increased_Trend_Mitigation_Interest__c.field-meta.xml
<CustomField>
    <fullName>Increased_Trend_Mitigation_Interest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Increased Trend Mitigation Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>