force-app/main/default/objects/Sales_Debrief__c/fields/Increased_Trend_Mitigation_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Increased_Trend_Mitigation_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Increased Trend Mitigation Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>