force-app/main/default/objects/Sales_Debrief__c/fields/Intent_to_Include_UHC_in_Next_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Intent_to_Include_UHC_in_Next_Cycle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Intent to Include UHC in Next Cycle</label>
    <type>TextArea</type>
</CustomField>