force-app/main/default/objects/Sales_Debrief__c/fields/Less_Innovative_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Less_Innovative_Capabilities__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Less Innovative Capabilities</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>