force-app/main/default/objects/Sales_Debrief__c/fields/Life_DI_Employer_Credit__c.field-meta.xml
<CustomField>
    <fullName>Life_DI_Employer_Credit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Life/DI Employer Credit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>