force-app/main/default/objects/Sales_Debrief__c/fields/Life_DI_Package_Savings__c.field-meta.xml
<CustomField>
    <fullName>Life_DI_Package_Savings__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Life/DI Package Savings</label>
    <length>10</length>
    <type>Text</type>
</CustomField>