force-app/main/default/objects/Sales_Debrief__c/fields/Life_DI_Total_Cost_of_Care_Guarantees__c.field-meta.xml
<CustomField>
    <fullName>Life_DI_Total_Cost_of_Care_Guarantees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Life/DI Total Cost of Care Guarantees</label>
    <length>10</length>
    <type>Text</type>
</CustomField>