force-app/main/default/objects/Sales_Debrief__c/fields/Life_Disability_BAFO__c.field-meta.xml
<CustomField>
    <fullName>Life_Disability_BAFO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Life Disability BAFO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>