force-app/main/default/objects/Sales_Debrief__c/fields/Life_Disability_Compare_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Life_Disability_Compare_Carrier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Life Disability Compare Carrier</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>