force-app/main/default/objects/Sales_Debrief__c/fields/Life_Disability_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Life_Disability_Competitor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Life Disability Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>