force-app/main/default/objects/Sales_Debrief__c/fields/Life_Disability_Cost_Winner_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Life_Disability_Cost_Winner_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Life Disability Cost Winner - Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>