force-app/main/default/objects/Sales_Debrief__c/fields/Life_Disability_Outcome_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Life_Disability_Outcome_Drivers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Life Disability Outcome Drivers</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>