force-app/main/default/objects/Sales_Debrief__c/fields/Main_Drivers_of_Medical_Trend_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Main_Drivers_of_Medical_Trend_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Main Drivers of Medical Trend Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>