force-app/main/default/objects/Sales_Debrief__c/fields/Markets_network_discount_disadvantages__c.field-meta.xml
<CustomField>
    <fullName>Markets_network_discount_disadvantages__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Markets network discount disadvantages</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>