force-app/main/default/objects/Sales_Debrief__c/fields/Medical_SVPs_engagement_before_RFP__c.field-meta.xml
<CustomField>
    <fullName>Medical_SVPs_engagement_before_RFP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical SVPs engagement before RFP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>