force-app/main/default/objects/Sales_Debrief__c/fields/Medical_Top_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Medical_Top_Competitor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Top Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>