force-app/main/default/objects/Sales_Debrief__c/fields/Medical_Top_Competitor_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Medical_Top_Competitor_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Top Competitor - Write In</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>