force-app/main/default/objects/Sales_Debrief__c/fields/Most_influence_final_carrier_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Most_influence_final_carrier_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Most influence final carrier - Write In</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>