force-app/main/default/objects/Sales_Debrief__c/fields/Most_influence_on_the_final_carrier__c.field-meta.xml
<CustomField>
    <fullName>Most_influence_on_the_final_carrier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Most influence on the final carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>