force-app/main/default/objects/Sales_Debrief__c/fields/Network_discount_data_used_by_consultant__c.field-meta.xml
<CustomField>
    <fullName>Network_discount_data_used_by_consultant__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Network discount data used by consultant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>