force-app/main/default/objects/Sales_Debrief__c/fields/Network_Solution_type__c.field-meta.xml
<CustomField>
    <fullName>Network_Solution_type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Network Solution type</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>