force-app/main/default/objects/Sales_Debrief__c/fields/Network_Solution_type_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Network_Solution_type_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Network Solution type - Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>