force-app/main/default/objects/Sales_Debrief__c/fields/Non_traditional_health_plan_opted__c.field-meta.xml
<CustomField>
    <fullName>Non_traditional_health_plan_opted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Non-traditional health plan opted</label>
    <type>TextArea</type>
</CustomField>