force-app/main/default/objects/Sales_Debrief__c/fields/Non_traditional_health_plans_evaluated__c.field-meta.xml
<CustomField>
    <fullName>Non_traditional_health_plans_evaluated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Non-traditional health plans evaluated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>