force-app/main/default/objects/Sales_Debrief__c/fields/Non_traditional_health_plans_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Non_traditional_health_plans_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Non-traditional health plans Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>