force-app/main/default/objects/Sales_Debrief__c/fields/Number_of_times_revise_financial_offer__c.field-meta.xml
<CustomField>
    <fullName>Number_of_times_revise_financial_offer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Number of times revise financial offer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>