force-app/main/default/objects/Sales_Debrief__c/fields/Other_Explain_Comment_Vision__c.field-meta.xml
<CustomField>
    <fullName>Other_Explain_Comment_Vision__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Explain Comment Vision</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>