force-app/main/default/objects/Sales_Debrief__c/fields/Other_factor_impact_Surest_Deal_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Other_factor_impact_Surest_Deal_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other factor impact Surest Deal Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>