force-app/main/default/objects/Sales_Debrief__c/fields/Other_factors_impacting_Surest_Deal__c.field-meta.xml
<CustomField>
    <fullName>Other_factors_impacting_Surest_Deal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other factors impacting Surest Deal</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>