force-app/main/default/objects/Sales_Debrief__c/fields/Other_factors_influenced_this_outcome__c.field-meta.xml
<CustomField>
    <fullName>Other_factors_influenced_this_outcome__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other factors influenced this outcome</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>