force-app/main/default/objects/Sales_Debrief__c/fields/Perception_network_discount_position__c.field-meta.xml
<CustomField>
    <fullName>Perception_network_discount_position__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Perception network discount position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>