force-app/main/default/objects/Sales_Debrief__c/fields/Platforms_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Platforms_Quoted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Platforms Quoted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>