force-app/main/default/objects/Sales_Debrief__c/fields/Print_Data_2__c.field-meta.xml
<CustomField>
    <fullName>Print_Data_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Print Data 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>