force-app/main/default/objects/Sales_Debrief__c/fields/Quad4_Biggest_Impact_on_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Quad4_Biggest_Impact_on_Relationship__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quad4 Biggest Impact on Relationship</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>