force-app/main/default/objects/Sales_Debrief__c/fields/Quad4_Helpful_Marketing_Modalities__c.field-meta.xml
<CustomField>
    <fullName>Quad4_Helpful_Marketing_Modalities__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quad4 Helpful Marketing Modalities</label>
    <type>TextArea</type>
</CustomField>