force-app/main/default/objects/Sales_Debrief__c/fields/Quad4_Helpful_Marketing_Modalty_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Quad4_Helpful_Marketing_Modalty_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quad4 Helpful Marketing Modalty Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>