force-app/main/default/objects/Sales_Debrief__c/fields/Reason_for_no_formal_Surest_quote__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_no_formal_Surest_quote__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason for no formal Surest quote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>