force-app/main/default/objects/Sales_Debrief__c/fields/Reason_for_no_Surest_quote_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_no_Surest_quote_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason for no Surest quote Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>