force-app/main/default/objects/Sales_Debrief__c/fields/Reason_selected_advocacy_provider__c.field-meta.xml
<CustomField>
    <fullName>Reason_selected_advocacy_provider__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason selected advocacy provider</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>