force-app/main/default/objects/Sales_Debrief__c/fields/Reasons_selected_medical_carrier_WriteIn__c.field-meta.xml
<CustomField>
    <fullName>Reasons_selected_medical_carrier_WriteIn__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reasons selected medical carrier WriteIn</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>