force-app/main/default/objects/Sales_Debrief__c/fields/Reasons_Surest_not_offered__c.field-meta.xml
<CustomField>
    <fullName>Reasons_Surest_not_offered__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reasons Surest not offered</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>