force-app/main/default/objects/Sales_Debrief__c/fields/Reasons_Surest_not_offered_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Reasons_Surest_not_offered_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reasons Surest not offered Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>