force-app/main/default/objects/Sales_Debrief__c/fields/Relationship_with_employer_before_RFP__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_employer_before_RFP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship with employer before RFP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>