force-app/main/default/objects/Sales_Debrief__c/fields/Rx_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Rx_Feedback__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rx Feedback</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>