force-app/main/default/objects/Sales_Debrief__c/fields/Rx_offer_from_winner__c.field-meta.xml
<CustomField>
    <fullName>Rx_offer_from_winner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rx offer from winner</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>