force-app/main/default/objects/Sales_Debrief__c/fields/Rx_Specific_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Rx_Specific_Requirements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rx Specific Requirements</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>