force-app/main/default/objects/Sales_Debrief__c/fields/Sales_Debrief__c.field-meta.xml
<CustomField>
    <fullName>Sales_Debrief__c</fullName>
    <label>Sales Debrief</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprehensive Medical</fullName>
            </value>
            <value>
                <fullName>Specialty Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>