force-app/main/default/objects/Sales_Debrief__c/fields/Second_Blues_Bid_Impact__c.field-meta.xml
<CustomField>
    <fullName>Second_Blues_Bid_Impact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Second Blues Bid Impact</label>
    <type>TextArea</type>
</CustomField>