force-app/main/default/objects/Sales_Debrief__c/fields/Specialty_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Commissions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Specialty Commissions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>