force-app/main/default/objects/Sales_Debrief__c/fields/Specialty_Commissions_Requested__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Commissions_Requested__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Specialty Commissions Requested</label>
    <type>TextArea</type>
</CustomField>