force-app/main/default/objects/Sales_Debrief__c/fields/Supp_Health_BAFO__c.field-meta.xml
<CustomField>
    <fullName>Supp_Health_BAFO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Supp Health BAFO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>