force-app/main/default/objects/Sales_Debrief__c/fields/Supp_Health_Package_Savings__c.field-meta.xml
<CustomField>
    <fullName>Supp_Health_Package_Savings__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Supp Health Package Savings</label>
    <length>10</length>
    <type>Text</type>
</CustomField>