force-app/main/default/objects/Sales_Debrief__c/fields/Supp_Health_Performance_Guarantees__c.field-meta.xml
<CustomField>
    <fullName>Supp_Health_Performance_Guarantees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Supp Health Performance Guarantees</label>
    <length>10</length>
    <type>Text</type>
</CustomField>