force-app/main/default/objects/Sales_Debrief__c/fields/Supp_Health_Solutions_cost__c.field-meta.xml
<CustomField>
    <fullName>Supp_Health_Solutions_cost__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Supp Health Solutions cost</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>