force-app/main/default/objects/Sales_Debrief__c/fields/Supp_Health_Solutions_credit__c.field-meta.xml
<CustomField>
    <fullName>Supp_Health_Solutions_credit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Supp Health Solutions credit</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>