force-app/main/default/objects/Sales_Debrief__c/fields/Supp_Health_Top_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Supp_Health_Top_Competitor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Supp Health Top Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>