force-app/main/default/objects/Sales_Debrief__c/fields/Supp_Health_Top_Drivers_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Supp_Health_Top_Drivers_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Supp Health Top Drivers - Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>