force-app/main/default/objects/Sales_Debrief__c/fields/Supp_Health_Total_Cost_of_Care_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Supp_Health_Total_Cost_of_Care_Guarantee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Supp Health Total Cost of Care Guarantee</label>
    <length>10</length>
    <type>Text</type>
</CustomField>