force-app/main/default/objects/Sales_Debrief__c/fields/Suppl_Health_Employer_Credit__c.field-meta.xml
<CustomField>
    <fullName>Suppl_Health_Employer_Credit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Suppl. Health Employer Credit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>