force-app/main/default/objects/Sales_Debrief__c/fields/Surest_as_Other_Platform_Entry__c.field-meta.xml
<CustomField>
    <fullName>Surest_as_Other_Platform_Entry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest as Other Platform Entry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>