force-app/main/default/objects/Sales_Debrief__c/fields/Surest_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Surest_Feedback__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Feedback</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>