force-app/main/default/objects/Sales_Debrief__c/fields/Surest_Interest__c.field-meta.xml
<CustomField>
    <fullName>Surest_Interest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Interest</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>