force-app/main/default/objects/Sales_Debrief__c/fields/Surest_Interest_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Surest_Interest_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Interest Write In</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>