force-app/main/default/objects/Sales_Debrief__c/fields/Surest_Least_Valued__c.field-meta.xml
<CustomField>
    <fullName>Surest_Least_Valued__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Least Valued</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>