force-app/main/default/objects/Sales_Debrief__c/fields/Surest_Network_Discount_Position_Impact__c.field-meta.xml
<CustomField>
    <fullName>Surest_Network_Discount_Position_Impact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Network Discount Position Impact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>