force-app/main/default/objects/Sales_Debrief__c/fields/Surest_outcome_tied_to_the_UHC_Medical__c.field-meta.xml
<CustomField>
    <fullName>Surest_outcome_tied_to_the_UHC_Medical__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest outcome tied to the UHC Medical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>