force-app/main/default/objects/Sales_Debrief__c/fields/Surest_s_ASO_Fees_Factor__c.field-meta.xml
<CustomField>
    <fullName>Surest_s_ASO_Fees_Factor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest&apos;s ASO Fees Factor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>