force-app/main/default/objects/Sales_Debrief__c/fields/Surest_Value_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Surest_Value_Proposition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Value Proposition</label>
    <length>25</length>
    <type>Text</type>
</CustomField>