force-app/main/default/objects/Sales_Debrief__c/fields/Surest_Value_Proposition_Presented__c.field-meta.xml
<CustomField>
    <fullName>Surest_Value_Proposition_Presented__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Value Proposition Presented</label>
    <length>255</length>
    <type>Text</type>
</CustomField>