force-app/main/default/objects/Sales_Debrief__c/fields/Surest_Value_Unclear__c.field-meta.xml
<CustomField>
    <fullName>Surest_Value_Unclear__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Value Unclear</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>