force-app/main/default/objects/Sales_Debrief__c/fields/Surest_Valued_by_Employer__c.field-meta.xml
<CustomField>
    <fullName>Surest_Valued_by_Employer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Valued by Employer</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>