force-app/main/default/objects/Sales_Debrief__c/fields/Technology_Connection__c.field-meta.xml
<CustomField>
    <fullName>Technology_Connection__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Technology Connection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>