force-app/main/default/objects/Sales_Debrief__c/fields/Test_Question_Creation_Vicky__c.field-meta.xml
<CustomField>
    <fullName>Test_Question_Creation_Vicky__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Test Question Creation Vicky</label>
    <length>255</length>
    <type>Text</type>
</CustomField>